# ide_app

./: .gitignore  Cargo.toml  README.md  ai.go  ai_settings.json  debugger.go  editor.go  editor_test.go  go.mod  install.ps1  main.go  main.ts  messages.go  package-lock.json  package.json  renderer.go  state.go  util.go  workspace.go
.stitch/: DESIGN.md  metadata.json
.stitch/designs/: .gitkeep  editor.html  tui.html  tui_ai_agent.html
src/: AIPanel.tsx  App.css  App.tsx  DebugPanel.tsx  DenoTerminal.tsx  Editor.tsx  ResizeHandle.tsx  debugger.rs  debugger.ts  editor.rs  main.rs  main.tsx  main_state.rs  ui.rs
src-tauri/: Cargo.toml  main.ts  tauri.conf.json
src-tauri/src/: lib.rs
